<resources>
    <string name="app_name">Logrolling</string>
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="NombreUsuario">\ Nombre de usuario</string>
    <string name="Cuenta">¿No tienes una cuenta?</string>
    <string name="Registrate">Regístrate</string>
    <string name="Cotraseña">\ Contraseña</string>
    <string name="RepCotraseña">\ Repetir contraseña</string>
    <string name="Registro">Registro</string>
    <string name="Logo">Logrolling</string>
    <string name="TerminosCondiciones">Acepto los <u>Términos y Condiciones y la Política de Privacidad</u></string>
    <string name="CuentaYa">¿Ya tienes una cuenta?</string>
    <string name="Explorar">Explorar</string>
    <string name="Favores">Favores</string>
    <string name="MisFavoresbis">Favores</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="Regalos">Regalos</string>
    <string name="Configuracion">Ajustes</string>
    <string name="Mensajes">Mensajes</string>
    <string name="GuardarCambios">Cambiar contraseña</string>
    <string name="Nombre">Nombre del favor</string>
    <string name="Descripcion">Descripción del favor</string>
    <string name="LugarRealiz">Lugar de realización</string>
    <string name="LugarEntrega">Lugar de entrega</string>
    <string name="FechaLimite">Fecha límite</string>
    <string name="Recompensa">Recompensa ofrecida</string>
    <string name="PedirFavor">Pedir nuevo favor</string>
    <string name="TextoPerfil">Cambia tu foto de perfil o contraseña</string>
    <string name="TextoNotificaciones">Cambia la luz, la configuración de notificaciones...</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="TextoAyuda">Aprende todo lo que debes saber sobre Logrolling</string>
    <string name="Ayuda">Ayuda</string>
    <string name="TextoAmigo">¡Gana grollies invitando a tus amigos!</string>
    <string name="Amigo">Invita a un amigo</string>
    <string name="Idioma">Idioma</string>
    <string name="TextoIdioma">¿Te consideras poliglota? Escoge tu idioma</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="TextoCerrarSesion">No te lo recomendamos, pero si lo deseas...</string>
    <string name="Tienda">Tienda</string>
    <string name="Diez">10</string>
    <string name="DosMil">2.000</string>
    <string name="DoceMil">12.000</string>
    <string name="CuarentaMil">40.000</string>
    <string name="NoventaMil">90.000</string>
    <string name="DosCientosMil">200.000</string>
    <string name="DiezMil">10.000</string>
    <string name="Gratis">Gratis</string>
    <string name="Uno">0.99€</string>
    <string name="Cinco">4.99€</string>
    <string name="Quince">14.99€</string>
    <string name="Treinta">29.99€</string>
    <string name="Sesenta">59.99€</string>
    <string name="restantes">(10 restantes)</string>
    <string name="RealizarFavor">Realizar favor</string>
    <string name="BuscarF">Buscar favor</string>
    <string name="RecompensaG">Recompensa mínima de grollies</string>
    <string name="TiempoRealizacion">Tiempo de realización</string>
    <string name="DistanciaMaxima">Distancia máxima</string>
    <string name="UnaHora">1 hora</string>
    <string name="DiezDias">10 días</string>
    <string name="Buscar">Buscar</string>
    <string name="G">G</string>
    <string name="distancias">500m \ 1km \  2km \  3km \  5km \  7km \  10km  \ 20km</string>
    <string name="FavoresARealizar">Favores a realizar</string>
    <string name="FavoresPedidos">Favores pedidos</string>
    <string name="FavorARealizar">Favor a realizar</string>
    <string name="FavorPedido">Favor pedido</string>
    <string name="Editar">Editar</string>
    <string name="Borrar">Borrar</string>
    <string name="ChatRealizador">Chat con Realizador</string>
    <string name="Confirmado">Adjudicado</string>
    <string name="Chatear">Chatear</string>
    <string name="Escribe">Escribe un mensaje</string>
    <string name="ConfirmacionCompra">¿Estás seguro de que quieres realizar la compra?</string>
    <string name="Confirmar">Confirmar</string>
    <string name="ConfirmacionCerrarSesion">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Perfilmodificado">Tu perfil ha sido modificado correctamente</string>
    <string name="ConfirmarDireccion">Necesitamos la dirección a la que enviarte el regalo.</string>
    <string name="ConfirmarEnvio">Confirmar envío</string>
    <string name="Dirección">Dirección</string>
    <string name="ConfirmarPedirFavor">¿Quieres publicar este nuevo favor? Cuando alguien se lo haya adjudicado ya no podrás editarlo.</string>
    <string name="ConfirmarRealizarFavor">¿Quieres realizar este favor? Cuando te adjudicas un favor te comprometes a hacerlo y no te puedes arrepentir.</string>
    <string name="RegistadoConExito">Usuario registrado con exito</string>
</resources>
