<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".view.activities.RegistrationActivity">

    <TextView
        android:id="@+id/IniciarSesion"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:linksClickable="true"
        android:onClick="signIn"
        android:text="@string/IniciarSesion"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/rubik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yaCuenta" />

    <Button
        android:id="@+id/Registrarse"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blanco"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/rubik"
        android:onClick="register"
        android:text="@string/Registrate"
        android:textAllCaps="true"
        android:textColor="@color/azul"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yaCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Contrasenna"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/Cotraseña"
        android:inputType="textPassword"
        android:textColor="@color/blancoSucio"
        android:textColorHint="@color/blancoSucio"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreUsuario" />

    <EditText
        android:id="@+id/RepContrasenna"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/RepCotraseña"
        android:inputType="textPassword"
        android:textColor="@color/blancoSucio"
        android:textColorHint="@color/blancoSucio"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contrasenna" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/rubik"
        android:text="@string/Registro"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:layout_marginBottom="40dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NombreUsuario"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/NombreUsuario"
        android:inputType="textPersonName"
        android:textColor="@color/blancoSucio"
        android:textColorHint="@color/blancoSucio"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/TerminosPrivacidad"
        android:layout_width="239dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/rubik"
        android:onClick="showPrivacyPolicy"
        android:text="@string/TerminosCondiciones"
        android:textColor="@color/blanco"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="@font/rubik"
        app:layout_constraintBottom_toTopOf="@+id/Registrarse"
        app:layout_constraintStart_toEndOf="@+id/Condiciones" />

    <TextView
        android:id="@+id/yaCuenta"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/CuentaYa"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:fontFamily="@font/rubik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>