<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2699FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Registro">

        <TextView
            android:id="@+id/IniciarSesion"
            android:layout_width="107dp"
            android:layout_height="26dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/rubik"
            android:linksClickable="true"
            android:onClick="iniciarSesion"
            android:text="@string/IniciarSesion"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/rubik"
            app:layout_constraintStart_toEndOf="@+id/yaCuenta"
            app:layout_constraintTop_toBottomOf="@+id/Registrarse" />

        <Button
            android:id="@+id/Registrarse"
            android:layout_width="283dp"
            android:layout_height="42dp"
            android:layout_marginTop="36dp"
            android:background="@color/blanco"
            android:fadingEdge="horizontal|vertical"
            android:fontFamily="@font/rubik"
            android:onClick="registrarse"
            android:text="@string/Registrate"
            android:textAllCaps="true"
            android:textColor="@color/azul"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TerminosPrivacidad" />

        <EditText
            android:id="@+id/Contrasenna"
            android:layout_width="358dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/Cotraseña"
            android:inputType="textPassword"
            android:textColor="@color/blancoSucio"
            android:textColorHint="@color/blancoSucio"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NombreUsuario" />

        <EditText
            android:id="@+id/RepContrasenna"
            android:layout_width="358dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/RepCotraseña"
            android:inputType="textPassword"
            android:textColor="@color/blancoSucio"
            android:textColorHint="@color/blancoSucio"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Contrasenna" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/rubik"
            android:text="@string/Registro"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/NombreUsuario"
            android:layout_width="357dp"
            android:layout_height="54dp"
            android:layout_marginTop="60dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:ems="10"
            android:fontFamily="@font/rubik"
            android:hint="@string/NombreUsuario"
            android:inputType="textPersonName"
            android:textColor="@color/blancoSucio"
            android:textColorHint="@color/blancoSucio"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Switch
            android:id="@+id/Condiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="92dp"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RepContrasenna" />

        <TextView
            android:id="@+id/TerminosPrivacidad"
            android:layout_width="242dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/rubik"
            android:onClick="mostrarPolíticaPrivacidad"
            android:text="@string/TerminosCondiciones"
            android:textColor="@color/blanco"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/rubik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/Condiciones"
            app:layout_constraintTop_toBottomOf="@+id/RepContrasenna" />

        <TextView
            android:id="@+id/yaCuenta"
            android:layout_width="174dp"
            android:layout_height="24dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/rubik"
            android:text="@string/CuentaYa"
            android:textColor="@color/blanco"
            android:textSize="16sp"
            app:fontFamily="@font/rubik"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registrarse" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>