<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo_logrolling"
        android:layout_width="179dp"
        android:layout_height="172dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IniciarSesion"
        app:srcCompat="@drawable/logrolling_logo" />

    <TextView
        android:id="@+id/IniciarSesion"
        android:layout_width="206dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:text="@string/IniciarSesion"
        android:textColor="@color/blancoSucio"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/rubik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NombreUsuario"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="378dp"
        android:layout_height="72dp"
        android:layout_marginBottom="15dp"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:fadeScrollbars="false"
        android:hint="@string/NombreUsuario"
        android:inputType="textPersonName"
        android:scrollbarSize="45sp"
        android:scrollbarStyle="insideInset"
        android:singleLine="false"
        android:textColor="@color/blancoSucio"
        android:textColorHint="@color/blancoSucio"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/Contrasenna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Contrasenna"
        android:layout_width="379dp"
        android:layout_height="78dp"
        android:layout_marginBottom="32dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/Cotraseña"
        android:inputType="textPassword"
        android:textColor="@color/blancoSucio"
        android:textColorHint="@color/blancoSucio"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/InicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/InicioSesion"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blanco"
        android:onClick="signIn"
        android:text="@string/IniciarSesion"
        android:textColor="@color/azul"
        app:layout_constraintBottom_toTopOf="@+id/Cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Cuenta"
        android:layout_width="153dp"
        android:layout_height="19dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="65dp"
        android:text="@string/Cuenta"
        android:textColor="@color/blanco"
        app:fontFamily="@font/rubik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cuenta"
        android:layout_width="75dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="65dp"
        android:onClick="registration"
        android:text="@string/Registrate"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:fontFamily="@font/rubik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Cuenta" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PopUpError5"
        android:layout_width="0dp"
        android:layout_height="411dp"
        android:background="#00C5BFBF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="368dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/okButtonred"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/rojo"
                android:fadingEdge="horizontal|vertical"
                android:fontFamily="@font/rubik"
                android:onClick="closeErrorPopUp"
                android:text="@string/Cerrar"
                android:textColor="@color/blanco"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/red"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@color/rojo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/stop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/red"
                app:layout_constraintEnd_toEndOf="@+id/red"
                app:layout_constraintStart_toStartOf="@+id/red"
                app:layout_constraintTop_toTopOf="@+id/red"
                app:srcCompat="@drawable/ic_remove_circle_black_24dp" />

            <TextView
                android:id="@+id/messageError"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:gravity="center"
                android:text="Texto error"
                android:textColor="@color/negro"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/red" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/closeCross2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:onClick="closeErrorPopUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_brightness_1_black_24dp" />

        <ImageView
            android:id="@+id/closeCircle2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:onClick="closeErrorPopUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clear_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>